--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["browserslistrc", "csscomb", "cylon", "systemvars", "tailwindcss"]
+	"cSpell.words": ["browserslistrc", "csscomb", "cylon", "mojs", "systemvars", "tailwindcss"]
 }
