--- a/package.json
+++ b/package.json
@@ -14,46 +14,47 @@
   "private": "true",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/plugin-transform-runtime": "^7.22.15",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-react": "^7.22.15",
+    "@babel/core": "^7.23.6",
+    "@babel/plugin-transform-runtime": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^8.50.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
-    "gh-pages": "^6.0.0",
-    "html-webpack-plugin": "^5.5.3",
+    "gh-pages": "^6.1.0",
+    "html-webpack-plugin": "^5.6.0",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.32",
     "postcss-loader": "^7.3.3",
-    "postcss-preset-env": "^9.1.4",
-    "prettier-plugin-tailwindcss": "^0.5.4",
+    "postcss-preset-env": "^9.3.0",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.3",
-    "webpack": "^5.88.2",
+    "tailwindcss": "^3.4.0",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.1.0",
-    "lesca-fetcher": "^1.1.0",
-    "lesca-use-tween": "^3.0.1",
-    "msw": "^1.3.1",
+    "@faker-js/faker": "^8.3.1",
+    "@mojs/core": "^1.7.1",
+    "lesca-fetcher": "^1.1.7",
+    "lesca-use-tween": "^3.0.6",
+    "msw": "^2.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.21.0"
   },
   "msw": {
     "workerDirectory": "public"
